scrollbar issue when loading particles fixed.

--- a/src/index.css
+++ b/src/index.css
@@ -43,3 +43,7 @@ align-items: center;
 justify-content: center;
 
 }
+
+#tsparticles {
+  position:absolute;
+}
